--- a/.gitignore
+++ b/.gitignore
@@ -20,15 +20,13 @@ yarn-error.log
 .settings/
 *.sublime-workspace
 
-.vscode
-
 # # Visual Studio Code
-# .vscode/*
-# !.vscode/settings.json
-# !.vscode/tasks.json
-# !.vscode/launch.json
-# !.vscode/extensions.json
-# .history/*
+.vscode/*
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
+.history/*
 
 # Miscellaneous
 /.angular/cache
