--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -4,24 +4,20 @@
     {
       "files": ["*.ts"],
       "parserOptions": {
-        "project": [
-          "tsconfig.*?.json",
-          "e2e/tsconfig.json"
-        ],
-        "createDefaultProgram": true
+        "project": ["tsconfig.(app|spec).json"]
       },
       "extends": [
+        "eslint:recommended",
+        "plugin:@typescript-eslint/recommended",
         "plugin:@angular-eslint/recommended",
-        "airbnb-typescript/base",
-        "prettier/@typescript-eslint",  
-        "plugin:prettier/recommended"
+        "plugin:@angular-eslint/template/process-inline-templates"
       ],
       "rules": {
         "@angular-eslint/directive-selector": [
           "error",
           {
             "type": "attribute",
-            "prefix": "tr",
+            "prefix": "app",
             "style": "camelCase"
           }
         ],
@@ -32,19 +28,14 @@
             "prefix": "tr",
             "style": "kebab-case"
           }
-        ]
+        ],
+        "@typescript-eslint/await-thenable": "error"
       }
     },
     {
-      "files": ["*.component.html"],
+      "files": ["*.html"],
       "extends": ["plugin:@angular-eslint/template/recommended"],
-      "rules": {
-        "max-len": ["error", { "code": 140 }]
-      }
-    },
-    {
-      "files": ["*.component.ts"],
-      "extends": ["plugin:@angular-eslint/template/process-inline-templates"]
+      "rules": {}
     }
   ]
 }
